[package]
name = "unsubscan"
version = "0.1.1"
authors = ["Jade Iqbal <jadeiqbal@fastmail.com>"]
description = "A tool to help you find unsubscribe links in your emails"
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3", features = ["derive"] }
color-eyre = "0.6"
lazy_static = "1.4"
linkify = "0.8"
maud = "0.23"
open = "3.0"
regex = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.3"